Added table component

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
-  text-align: center;
+body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#user-table {
+  width: fit-content;
+  background-color: aliceblue;
+  padding: 15px;
+  border-radius: 5px;
+  box-shadow: 2px 2px 0px gainsboro;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.table-row {
+  display: grid;
+  grid-template-columns: 50px 90px 140px 130px 200px 90px 80px;
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.table-row > div {
+  padding-right: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.table-header {
+  font-weight: bold;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.category > div {
+  width: 20px;
+  height: 20px;
+  border-radius: 10px;
+}
+
+button:hover  {
+  cursor: pointer;
+}
+
+option[value="red"] {
+  background: red;
+}
+
+option[value="green"] {
+  background: green;
+} 
+
+.red > div {
+  background: red;
+}
+
+.green > div {
+  background: green;
 }
